<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>kryptonbutterfly</groupId>
	<artifactId>tiny_totp</artifactId>
	<version>4.2.0</version>
	<name>TinyTOTP</name>
	<description>A TOTP client</description>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub kryptonbutterfly Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/kryptonbutterfly/maven-repo</url>
		</repository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>18</java.version>
	</properties>

	<repositories>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/kryptonbutterfly/maven-repo</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- https://central.sonatype.com/artifact/com.github.sarxos/webcam-capture/0.3.12 -->
		<dependency>
			<groupId>com.github.sarxos</groupId>
			<artifactId>webcam-capture</artifactId>
			<version>0.3.12</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.16.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<version>3.5.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://github.com/kryptonbutterfly/maven-repo/packages/2044827 -->
		<dependency>
			<groupId>kryptonbutterfly</groupId>
			<artifactId>reflection_utils</artifactId>
			<version>2.0.0</version>
		</dependency>
		<!-- https://github.com/kryptonbutterfly/maven-repo/packages/2044864 -->
		<dependency>
			<groupId>kryptonbutterfly</groupId>
			<artifactId>tiny_system_utils</artifactId>
			<version>2.1.1</version>
		</dependency>
		<!-- https://github.com/kryptonbutterfly/maven-repo/packages/2044859 -->
		<dependency>
			<groupId>kryptonbutterfly</groupId>
			<artifactId>tiny_cache</artifactId>
			<version>2.0.1</version>
		</dependency>
		<!-- https://github.com/kryptonbutterfly/maven-repo/packages/2044845 -->
		<dependency>
			<groupId>kryptonbutterfly</groupId>
			<artifactId>tiny_swing_utils</artifactId>
			<version>4.0.1</version>
		</dependency>
		<!-- https://github.com/kryptonbutterfly/maven-repo/packages/2044808 -->
		<dependency>
			<groupId>kryptonbutterfly</groupId>
			<artifactId>linear_algebra</artifactId>
			<version>4.0.0</version>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>18</release>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.30</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>false</addClasspath>
							<mainClass>kryptonbutterfly.totp.TinyTotp</mainClass>
						</manifest>
						<manifestEntries>
							<Add-Opens>java.desktop/sun.awt.X11</Add-Opens>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<entryPoints>
								<entryPoint>kryptonbutterfly.topt.TinyTotp</entryPoint>
							</entryPoints>
							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}.jar</outputFile>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-help-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>generate-version-file</id>
						<phase>package</phase>
						<goals>
							<goal>evaluate</goal>
						</goals>
						<configuration>
							<expression>project.version</expression>
							<output>${project.basedir}/deb-content/version.txt</output>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>